<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Tae Kwon Do Blackbelt Book</string>
    <string name="title_page_detail">Page Detail</string>
    
    <!-- Basic Terms -->
    <string-array name="attention">
        <item>Attention</item>
        <item>Charyut</item>
    </string-array>
    
    <string-array name="ready_stance">
        <item>Ready Stance</item>
        <item>Jhoon Bi</item>
    </string-array>
    
    <string-array name="begin_start">
        <item>Begin/Start</item>
        <item>She-Jak</item>
    </string-array>
    
    <string-array name="belt">
        <item>Belt</item>
        <item>Dhee</item>
    </string-array>
    
    <string-array name="concentration">
        <item>Concentration</item>
        <item></item>
    </string-array>
    
    <!-- Button Strings -->
    <string name="add_create">+</string>
    <string name="edit">Edit</string>
    <string name="remove_delete">-</string>
    
    <!-- Menu Items -->
    <string name="physical_fitness">Physical Fitness</string>
    <string name="food_journal">Food Journal</string>
    <string name="weekly_journal">Weekly Journal</string>
    <string name="creative_form">Creative Form</string>
    <string name="class_assisting">Class Assisting</string>
    <string name="writing_checklist">Writing Checklist</string>
    <string name="testing_checklist">Testing Checklist</string>
    <string name="important_dates">Important Dates</string>
    <string name="notes">Notes</string>
    
    <!-- Physical Fitness -->
    <string name="push_ups">Push Ups</string>
    <string name="sit_ups">Sit Ups</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="stretching">Stretching</string>
    <string name="endurance">Endurance</string>
    <string name="basic_punches">Basic Punches</string>
    <string name="basic_blocks">Basic Blocks</string>
    <string name="knee_highs">Knee Highs</string>
    <string name="squats">Squats</string>
    <string name="forms">Forms</string>
    <string name="creative_self_defense">Creative Self Defense</string>
    <string name="creative_breaks">Creative Breaks</string>
    
    <!-- Writing Checklist -->
    <string name="fasting">Fasting</string>
    <string name="healthy_habits">Healthy Habits</string>
    <string name="perseverance">Perseverance</string>
    <string name="thank_you_note">Thank You Note</string>
    <string name="respect">Respect</string>
    <string name="righting_wrongs">Righting Wrongs &amp; Mending Relationships</string>
    
    <!-- Testing Checklist -->
    <string name="letter_of_recommendation">Letter of Recommendation</string>
    <string name="digital_picture">Digital Picture/Photo</string>
    <string name="bb_project_complete">Black Belt Project Complete</string>
    <string name="essay_1_complete">Essay 1 Complete</string>
    <string name="essay_2_complete">Essay 2 Complete</string>
    <string name="testing_fees_paid">Testing Fees Paid</string>
    
    <!-- Date List -->
    <string name="prequal_date">Pre-qualification Date</string>
    <string name="rehearsal_date">Rehearsal Date</string>
    <string name="part_one_test_date">Part 1 Test Date</string>
    <string name="part_two_test_date">Part 2 Test Date</string>
    <string name="book_completion_date">Book Completion Date</string>
    
    <!-- Meal Strings -->
    <string name="add_food">Add Food Item</string>
    
    <!-- Phrase Completion Strings -->
	<string name="completed">Completed</string>
	<string name="classes">Classes</string>
	<string name="backslash">/</string>
</resources>