<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
    	android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/prequal_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/prequal_row"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/prequal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date" 
            android:hint="Start Date" />

		<EditText
        	android:id="@+id/prequal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date" 
            android:hint="End Date" />
        	
    </LinearLayout>

    <TextView
    	android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rehearsal_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
    	android:id="@+id/rehearsal_date"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="date" 
        android:hint="Date" />

    <TextView
    	android:id="@+id/textView3"
       	android:layout_width="wrap_content"
       	android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/part_one_test_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   <LinearLayout
        android:id="@+id/part_one_test_row"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
			
		<EditText
            android:id="@+id/part_one_test_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date" 
            android:hint="Date" />

		<EditText
		    android:id="@+id/part_one_start_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="time" 
		    android:hint="Start Time" />
		
		<EditText
		    android:id="@+id/part_one_end_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="time" 
		    android:hint="End Time" />

    </LinearLayout>

    <TextView
    	android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/part_two_test_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/part_two_test_row"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/part_two_test_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date" 
            android:hint="Date" />

		<EditText
		    android:id="@+id/part_two_start_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="time" 
		    android:hint="Start Time"/>
		
		<EditText
		    android:id="@+id/part_two_end_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="time" 
		    android:hint="End Time"/>

    </LinearLayout>

    <TextView
    	android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/book_completion_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
    	android:id="@+id/book_completion_date"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="date" 
        android:hint="Date" />
    
   
</LinearLayout>
